started face and hat

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <div id="box">
+      <div id="face-1">
+        <div id="hat-1">
+          <div id="hat-top-1"></div>
+        </div>
+        <div id="brim-1">
+          <div id="brim-end-1"></div>
+        </div>
+      </div>
+      <div id="face-2"></div>
     </div>
   </body>
-</html>    
+</html>
