--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
   </head>
   <body>
     <div id="box">
-      <div id="face-1">
-        <div id="hat-1">
-          <div id="hat-top-1"></div>
-        </div>
-        <div id="brim-1">
-          <div id="brim-end-1"></div>
-        </div>
+      <div id="hat-1">
+        <div id="hat-top-1"></div>
       </div>
-      <div id="face-2"></div>
+      <div id="brim-1"></div>
+      <div id="hat-2">
+        <div id="hat-top-2"></div>
+      </div>
+      <div id="brim-2"></div>
+      <div id="face-1">
+        <div id="eye-1"></div>
+      </div>
+      <div id="face-2">
+        <div id="eye-2"></div>
+      </div>
     </div>
   </body>
 </html>
