--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   </head>
   <body>
     <div id="box">
-      <div id="hat-1">
-        <div id="hat-top-1"></div>
+      <div id="hat-1" class="hat-1">
+        <div id="hat-top-1" class="hat-1"></div>
       </div>
-      <div id="brim-1"></div>
-      <div id="hat-2">
-        <div id="hat-top-2"></div>
+      <div id="brim-1" class="hat-1"></div>
+      <div id="hat-2" class="hat-2">
+        <div id="hat-top-2" class="hat-2"></div>
       </div>
-      <div id="brim-2"></div>
+      <div id="brim-2" class="hat-2"></div>
       <div id="face-1">
-        <div id="eye-1"></div>
+        <div class="eye"></div>
       </div>
       <div id="face-2">
-        <div id="eye-2"></div>
+        <div class="eye"></div>
       </div>
     </div>
   </body>
