--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
       <div id="brim-2" class="hat-2"></div>
       <div id="face-1">
         <div class="eye"></div>
+        <div id="beak-1"></div>
       </div>
       <div id="face-2">
         <div class="eye"></div>
+        <div id="beak-2"></div>
+
       </div>
     </div>
   </body>
