--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
       <div id="face-1">
         <div class="eye"></div>
         <div id="beak-1"></div>
+        <div class="glasses"></div>
+        <div id="glass-mid"></div>
       </div>
       <div id="face-2">
         <div class="eye"></div>
         <div id="beak-2"></div>
-
+        <div class="glasses"></div>
       </div>
     </div>
   </body>
