--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
         <div id="hat-top-2" class="hat-2"></div>
       </div>
       <div id="brim-2" class="hat-2"></div>
-      <div id="face-1">
+      <div id="face-1" class="face-1">
         <div class="eye"></div>
-        <div id="beak-1"></div>
+        <div id="beak-1" class="beak"></div>
         <div class="glasses"></div>
         <div id="glass-mid"></div>
+        <div class="face-1 side"></div>
       </div>
-      <div id="face-2">
+      <div id="face-2" class="face-2">
         <div class="eye"></div>
-        <div id="beak-2"></div>
+        <div id="beak-2" class="beak"></div>
         <div class="glasses"></div>
+        <div class="face-2 side"></div>
+
       </div>
     </div>
   </body>
